[Presentation API] Change controller connection to 'terminated' when receiver connection terminates

When calling receiver connection.terminate(), we rely on MRP to change controller connection to 'terminated'. If receiver page goes away before MRP finishes setting up mirroring, MPR will signal 'closed' instead of 'terminated'. Fix this by making receiver connection proxy signal 'terminated' to controller connection when receiver frame goes away at browser side.

BUG=712858

Review-Url: https://codereview.chromium.org/2863903002
Cr-Commit-Position: refs/heads/master@{#472860}