content/renderer/presentation/presentation_connection_proxy.h
@@ -87,6 +87,8 @@ class CONTENT_EXPORT PresentationConnectionProxy
 
   // blink::WebPresentationConnectionProxy implementation.
   void Close() const override;
+  void NotifyTargetConnection(
+      blink::WebPresentationConnectionState state) override;
 
  protected:
   explicit PresentationConnectionProxy(
