third_party/WebKit/Source/modules/presentation/PresentationConnection.h
@@ -96,6 +96,8 @@ class PresentationConnection final : public EventTargetWithInlineData,
   WebPresentationConnectionState GetState();
   void DidChangeState(WebPresentationConnectionState,
                       bool should_dispatch_event);
+  // Notify target connection about connection state change.
+  void NotifyTargetConnection(WebPresentationConnectionState);
 
  protected:
   // EventTarget implementation.
