third_party/WebKit/public/platform/modules/presentation/WebPresentationConnectionProxy.h
@@ -8,6 +8,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
+enum class WebPresentationConnectionState;
+
 // The implementation the embedder has to provide for the Presentation API to
 // work. This class is used to send messages to a PresentationConnection hosted
 // in a different frame.
@@ -17,6 +19,9 @@ class WebPresentationConnectionProxy {
 
   // Close target connection.
   virtual void Close() const = 0;
+
+  // Notify target connection about connection state change.
+  virtual void NotifyTargetConnection(WebPresentationConnectionState) = 0;
 };
 
 }  // namespace blink
